# summer-code-jam-2020

./: .directory  .editorconfig  .gitignore  .travis.yml  ASSETS.MD  CONTRIBUTORS.txt  Dockerfile  LICENSE  README.md  README.rst  Vagrant_Guide.md  Vagrantfile  Windows10Home.md  Windows10HomeLocal.md  local.yml  package-lock.json  production.yml  run.sh  setup.cfg  setup.sh  setup_windows_environment.bat  tester.py
bulky-butterflies/: .pre-commit-config.yaml  .travis.yml  Pipfile  README 2.md  README.md  pyproject.toml  requirements.txt  tox.ini
bulky-butterflies/src/: manage.py
bulky-butterflies/src/butterflies/: asgi.py  settings.py  urls.py  wsgi.py
bulky-butterflies/src/chat/: admin.py  models.py
bulky-butterflies/src/messenger/: asgi.py  settings.py  urls.py  wsgi.py
glossy-gorillas/: Makefile  README.md  git_basics.md  manage.py  pyproject.toml  pytest.ini
glossy-gorillas/core/: admin.py  fixtures.py  forms.py  views.py
glossy-gorillas/core/factories/: __init__.py  market.py  news_feed.py  product.py  review.py  trader.py
glossy-gorillas/core/forms/: __init__.py  market.py
glossy-gorillas/core/migrations/: 0001_initial.py  0002_review.py  0003_newsfeed.py  0004_homepage.py  0005_alter_listing_for_batch_purchase.py
glossy-gorillas/core/models/: __init__.py  market.py  news_feed.py  review.py  (+2 more)
glossy-gorillas/docs/: homepage-design.md  index.md
glossy-gorillas/glossy_gorillas/: asgi.py  settings.py  urls.py  wsgi.py
glossy-gorillas/meetings/: 2020_07_29.md
glossy-gorillas/static/: style.css
glossy-gorillas/utils/: __init__.py  providers.py
(+3279 files in other folders)
