[tool.poetry]
name = "glossy_gorrilas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
factory-boy = "^2.12.0"
asgiref = "^3.2.10"
django-simple-bulma = "^1.3.2"
django-crispy-forms = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-django = "^3.9.0"
black = "^19.10b0"
hypothesis-auto = "^1.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
